Add tooltip to user list "Remove" button in "Restrict sign-in" settings

Per UI discussion in the bug, "Remove" is the suggested string.

Use a new string in the .grd file for localization (in case there's
a language that uses a different conjugation of "Remove" for "user" vs.
other nouns).

Bug: 766967
Test: manual, on device
Change-Id: I99295e77d3df26b2c25dbdc4c8a0c4298817f078
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1538597
Commit-Queue: James Cook <jamescook@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#644441}
Former-commit-id: 8f29ed1f90421eece00319e9e4433eec5944e4b6